--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -65,7 +65,8 @@ jobs:
     # 📚 See https://docs.github.com/en/actions/using-workflows/workflow-syntax-for-github-actions#jobsjob_idstepsrun
       run: |
         echo "Run, Build Application using script"
-        ./config 
+        ./buildconf
+        ./configure
         
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v2
