--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -69,6 +69,7 @@ jobs:
         ./buildconf
         ./configure
         make clean
+        make
         
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v2
